<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Umbrella Today</string>
    <string name="about_button_text">About</string>
    <string name="about_umbrella_today">About Umbrella Today</string>
    <string name="about_text">
    &lt;p&gt;The Umbrella Today Android app is copyright 2010 Boston Android.&lt;/p&gt;
    &lt;p&gt;The project was lead by &lt;a href="&quot;http://matthoran.com/&quot;&gt;Matt Horan&lt;/a&gt; with help from
    &lt;a href=&quot;http://mike-burns.com/&quot;&gt;Mike Burns&lt;/a&gt; and the rest of &lt;a href=&quot;http://bostonandroid.org/&quot;&gt;the Boston Android developers group&lt;/a&gt;.&lt;/p&gt;
    &lt;p&gt;The original &lt;a href=&quot;http://umbrellatoday.com/&quot;&gt;Umbrella Today&lt;/a&gt; is copyright 2010 &lt;a href=&quot;http://thoughtbot.com/&quot;&gt;thoughtbot&lt;/a&gt;.&lt;/p&gt;
    &lt;p&gt;Icons by the Tango Desktop Project and by Androidicons.&lt;p&gt;
    &lt;p&gt;Source code licensed under the BSD 3-clause license, available on &lt;a href=&quot;http://github.com/bostonandroid/UmbrellaToday&quot;&gt;Github&lt;/a&gt;.&lt;p&gt;
    </string>
    <string name="new_location_text">New Location</string>
    <string name="no_alerts">Never forget your umbrella again. Set notifications and we\'ll take care of the rest.</string>
    <string name="no_alerts_tagline">It\'s totally like the simplest weather report ever, Julie.</string>
    <string name="time">Alert Time</string>
    <string name="repeat">Day Repetition</string>
    <string name="location_title">Location</string>
    <string name="detect_location">Use my location</string>
    <string name="location">City</string>
    <string name="new_alert">New Alert</string>
    <string name="save_alert">Add Alert</string>
    <string name="update_alert">Update Alert</string>
    <string name="widget_name">Umbrella Today Widget</string>
    <string name="widget_loading">Loading!?!</string>
    <string name="delete_alert">Delete Alert</string>
    <string name="edit_alert">Edit Alert</string>
    <string name="enable_alert">Enable Alert</string>
    <string name="add_alert_welcome">Add your first alert</string>
</resources>
